--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,4 +1,30 @@
 
+
+# Allostatic load 
+
+@article{seeman2001social,
+  title={Social relationships, social support, and patterns of cognitive aging in healthy, high-functioning older adults: MacArthur studies of successful aging.},
+  author={Seeman, Teresa E and Lusignolo, Tina M and Albert, Marilyn and Berkman, Lisa},
+  journal={Health psychology},
+  volume={20},
+  number={4},
+  pages={243},
+  year={2001},
+  publisher={American Psychological Association}
+}
+# RAND
+
+@article{hays1993rand,
+  title={The rand 36-item health survey 1.0},
+  author={Hays, Ron D and Sherbourne, Cathy Donald and Mazel, Rebecca M},
+  journal={Health economics},
+  volume={2},
+  number={3},
+  pages={217--227},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
 # CTS P-C
 
 @article{straus1998identification,
